fix card footer gap

--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -99,6 +99,10 @@
             }
         }
 
+        &__footer {
+            gap: 3.2rem;
+        }
+
 
         h1 {
             font-size: 2.8rem;
